# PrediBench

./: .gitignore  pyproject.toml
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  launch-investment-backward.yml  launch-investment.yml  run-predictions.yml  test-and-deploy-backward.yml  test-and-deploy.yml  test.yml
data/2025-08-17/: events_cache.json
examples/: invest.py  random_polymarket.py
frontend_space/: requirements.txt
output/: interesting_questions.json  selected_events.json
output/smolagent_events_test_random/2025-07-25/: event_allocations.json
output/smolagent_events_test_random/2025-08-01/: event_allocations.json
output/smolagent_gpt-4.1-mini/2025-07-25/: Israel x Hamas ceasefire by August 15?.json  Will Andrónico Rodríguez win the 2025 Bolivia pres.json  Will Jorge “Tuto” Quiroga win the 2025 Bolivia pre.json  Will Samuel Doria Medina win the 2025 Bolivia pres.json  Will the U.S. tariff rate on China be between 25% .json
output/smolagent_gpt-4.1-mini/2025-08-01/: Israel x Hamas ceasefire by August 15?.json  Will Andrónico Rodríguez win the 2025 Bolivia pres.json
output/smolagent_test_random/2025-08-01/: Israel x Hamas ceasefire by August 15?.json
predibench-backend/: .dockerignore  Dockerfile  README.md  app.py  auth.py  main.py  models.py  pyproject.toml  requirements.txt
predibench-core/: pyproject.toml  setup_submodules.sh  test_components.py
predibench-core/examples/: invest.py  upload_agent_choices.py
predibench-core/output/: interesting_questions.json  selected_events.json
predibench-core/output/smolagent_events_test_random/2025-07-25/: event_allocations.json
predibench-core/output/smolagent_events_test_random/2025-08-01/: event_allocations.json
predibench-core/output/smolagent_test_random/2025-07-25/: Will Andrónico Rodríguez win the 2025 Bolivia pres.json  Will the U.S. tariff rate on China be between 25% .json
predibench-core/output/smolagent_test_random/2025-08-01/: Israel x Hamas ceasefire by August 15?.json  Will Andrónico Rodríguez win the 2025 Bolivia pres.json  Will the U.S. tariff rate on China be between 25% .json
predibench-core/scripts/: main.py  main_backward.py
predibench-core/src/market_bench/: pnl.py  polymarket_api.py
predibench-core/src/predibench/: __init__.py  agent.py  agent_dataclasses.py  agent_smolagents_utils.py  common.py  date_utils.py  invest.py  logging.py  market_selection.py  pnl.py  polymarket_api.py  polymarket_data.py  retry_config.py  retry_models.py  storage_utils.py  utils.py
predibench-core/src/predibench/agent/: dataclasses.py  main.py  runner.py  smolagents_utils.py
predibench-core/tests/: test_engine.py  test_event_caching_e2e.py  test_invest.py  test_invest_e2e.py  test_market_selection.py  test_market_selection_e2e.py  test_old_markets.py  test_plotting.py  test_pnl.py  test_polymarket_api.py  test_polymarket_integration.py  test_runner.py  test_storage_utils.py  test_utils.py
predibench-frontend/: README.md  app.py  requirements.txt
predibench-frontend-gradio/: app.py  requirements.txt
predibench-frontend-react/: .firebaserc  firebase.json  index.html  package-lock.json  package.json  tailwind.config.js
predibench-frontend-react/src/: App.tsx  api.ts  apiSubmission.ts  firebase.ts  index.css
src/market_bench/: common.py  pnl.py  polymarket_api.py
tests/: test_engine.py  test_old_markets.py  test_polymarket_api.py  test_utils.py
(+26 files in other folders)
