[project]
name = "market-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.0",
    "py-clob-client>=0.24.0",
    "requests>=2.32.4",
]

[project.scripts]
hello = "market_bench:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
