[project]
name = "market-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.0",
    "kaleido>=1.0.0",
    "matplotlib>=3.10.5",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=6.2.0",
    "py-clob-client>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.32.4",
    "smolagents>=1.20.0",
]

[project.scripts]
hello = "market_bench:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
