[project]
name = "market-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.0",
    "kaleido>=1.0.0",
    "litellm>=1.74.15.post1",
    "markdownify>=1.1.0",
    "matplotlib>=3.10.5",
    "nbformat>=5.10.4",
    "numpy>=1.24.0",
    "openai>=1.98.0",
    "pandas>=2.0.0",
    "plotly>=6.2.0",
    "py-clob-client>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.32.4",
    "smolagents @ git+https://github.com/huggingface/smolagents.git@main",
]

[project.scripts]
hello = "market_bench:hello"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
