[project]
name = "predibench-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dataset>=1.6.2",
    "datasets>=2.0.0",
    "fastapi>=0.116.1",
    "huggingface-hub>=0.34.4",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.11.7",
    "uvicorn[standard]>=0.35.0",
    "plotly>=5.0.0",
    "requests>=2.31.0",
    "tenacity>=8.0.0",
    "coloredlogs>=15.0.0",
    "predibench @ git+https://github.com/aymeric-roucher/PrediBench#subdirectory=predibench-core",
]
