[project]
name = "predibench"
version = "0.1.0"
description = "Core package for PrediBench agent predictions on Polymarket"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.11.0",
    "coloredlogs>=15.0.1",
    "datasets>=4.0.0",
    "google-api-python-client>=2.179.0",
    "google-cloud-secret-manager>=2.24.0",
    "google-cloud-storage>=3.3.0",
    "gradio>=5.42.0",
    "huggingface-hub>=0.34.3",
    "ipykernel>=6.30.0",
    "kaleido>=1.0.0",
    "litellm>=1.74.15.post1",
    "markdownify>=1.1.0",
    "matplotlib>=3.10.5",
    "nbformat>=5.10.4",
    "numpy>=1.24.0",
    "openai>=1.98.0",
    "pandas>=2.0.0",
    "plotly>=6.2.0",
    "py-clob-client>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.32.4",
    "smolagents @ git+https://github.com/huggingface/smolagents.git@main",
    "tenacity>=9.1.2",
]

[project.scripts]
hello = "predibench:hello"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
